--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "3.0.4",
     "jade": "*",
 	"mongodb": "*",
+    "connect-mongo": "*",
     "vows": "*",
     "proxyquire": "*",
     "sinon": "*"
