--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "start": "node app"
   },
   "dependencies": {
-    "express": "3.0.4",
     "jade": "*",
     "mongodb": "*",
     "connect-mongo": "*",
     "vows": "*",
     "proxyquire": "*",
     "sinon": "*",
-    "mocha": "~1.12.0"
+    "mocha": "~1.12.0",
+    "express": "~3.3.4"
   }
 }
